--- a/TestMKL/TestMKL.csproj
+++ b/TestMKL/TestMKL.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TestMKL.Program</StartupObject>
+    <StartupObject>MKLtest.Tests.ComputeNETexample</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Compute.Bindings.IntelMKL, Version=0.1.5.0, Culture=neutral, processorArchitecture=AMD64">
@@ -56,8 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Benchmarks\DenseMatrices.cs" />
+    <Compile Include="Benchmarks\SparseMatrices.cs" />
+    <Compile Include="Benchmarks\SymmetricMatrices.cs" />
+    <Compile Include="Benchmarks\TriangularMatrices.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ComputeNETexample.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
