--- a/TestMKL/TestMKL.csproj
+++ b/TestMKL/TestMKL.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TestMKL.Tests.ConversionTests</StartupObject>
+    <StartupObject>TestMKL.Tests.TriangularSolutions</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Compute.Bindings.IntelMKL, Version=0.1.5.0, Culture=neutral, processorArchitecture=AMD64">
@@ -65,6 +65,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ComputeNETexample.cs" />
     <Compile Include="Tests\ConversionTests.cs" />
+    <Compile Include="Tests\MatrixVectorMultiplications.cs" />
+    <Compile Include="Tests\TriangularSolutions.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
